Git_WGBH_QC/src/objects/Ticker_Symbol__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stock_Exchange__c</fullName>
        <label>Stock Exchange</label>
        <picklist>
            <picklistValues>
                <fullName>NASDAQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NYSE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMEX</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Ticker Symbol</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Ticker Symbol</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ticker Symbols</pluralLabel>
    <recordTypes>
        <fullName>Ticker_Symbol_Standard</fullName>
        <active>true</active>
        <label>Ticker Symbol Standard</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>